ajout du composant de texte d'information

--- a/src/main/resources/sabo/yahvya/githubdirectoryextractor/css/components/app-button.css
+++ b/src/main/resources/sabo/yahvya/githubdirectoryextractor/css/components/app-button.css
@@ -1,6 +1,6 @@
 .app-button-component{
     -fx-background-color: -fx-theme-special-color;
-    -fx-text-fill: -fx-theme-text-color;
+    -fx-text-fill: -fx-theme-text-up-color;
     -fx-font-size: 16.5px;
     -fx-cursor: pointer;
     -fx-font-family: "Roboto","Arial","sans-serif";
