implémentation de la vue d'erreur

--- a/src/main/resources/sabo/yahvya/githubdirectoryextractor/css/app/app.css
+++ b/src/main/resources/sabo/yahvya/githubdirectoryextractor/css/app/app.css
@@ -3,7 +3,7 @@
 *{
     -fx-theme-background-color: #0D1117;
     -fx-theme-upper-color: #292E36;
-    -fx-theme-text-color: #000;
+    -fx-theme-text-color: #fff;
     -fx-theme-special-color: #1F6FEB;
     -fx-theme-text-up-color: #fff;
 }
