implémentation de la vue d'extraction, choix des dossiers à ajouter

--- a/src/main/resources/sabo/yahvya/githubdirectoryextractor/css/app/app.css
+++ b/src/main/resources/sabo/yahvya/githubdirectoryextractor/css/app/app.css
@@ -6,4 +6,5 @@
     -fx-theme-text-color: #fff;
     -fx-theme-special-color: #1F6FEB;
     -fx-theme-text-up-color: #fff;
+    -fx-theme-special-light-color: #f0f6fc1a;
 }
